[package]
name = "libp2p-autonatv2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
libp2p = { version = "0.54.1", features = ["macros", "quic", "autonat", "identify", "tokio", "tcp", "yamux", "noise"] }
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
